--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<H1>avalon2012 Mark Shekoyan</H1>
-
+ <!DOCTYPE html>
+ <html lang="en-us">
+ <head>
+   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta charset="UTF-8">
+   <title>Save, share and collaborate | Blocbox</title>
+ </head>
+ <body>
+ </body>
+ </html>
