--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        </li>
      </ul>
    </section>
-   
+
  <!-- Pricing -->
  <section class="pricing">
    <div class="container">
@@ -67,8 +67,34 @@
          <a href="signup.html" class="btn">Start Your Free Trial!</a>
        </div>
      </li>
-   </ul>
- </section>
+      <li class="one-third">
+      <div class="box middle">
+        <h3>Professional</h3>
+        <h4><span>$</span>5 <span class="month">/month</span></h4>
+        <ul>
+          <li>Unlimited boxes</li>
+          <li>Up to 20 collaborators</li>
+          <li><strong>5GB</strong> of storage</li>
+          <li>Real-time collaboration</li>
+        </ul>
+        <a href="signup.html" class="btn">Start Your Free Trial!</a>
+      </div>
+    </li>
+    <li class="one-third">
+      <div class="box">
+        <h3>Expert</h3>
+        <h4><span>$</span>10 <span class="month">/month</span></h4>
+        <ul>
+          <li>Unlimited boxes</li>
+          <li>Unlimited collaborators</li>
+          <li><strong>Unlimited</strong> storage</li>
+          <li>Real-time collaboration</li>
+        </ul>
+        <a href="signup.html" class="btn">Start Your Free Trial!</a>
+      </div>
+    </li>
+    </ul>
+  </section>
  </main>
 </body>
 </html>
