--- a/index.html
+++ b/index.html
@@ -130,7 +130,12 @@
   </ul>
  </section>
  </main>
- 
+<!-- Sign Up Now! -->
+ <section class="Sign Up Now">
+  <h1>SIGN UP NOW!</h1>
+  <p>Blocbox is a powerful way to collaborate. Sign Up Now!</p>
+  </section>
+
  <!-- Footer -->
  <footer>
    <div class="container footer-nav-block">
