--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
  <!-- CSS -->
  <link rel="stylesheet" href="css/normalize.css">
- <link rel="stylesheet" href="css/style.css">
+ <link rel="stylesheet" href="css/Style.css">
  <link rel="stylesheet" href="css/font-awesome.css">
 
  </head>
