--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
  <link rel="stylesheet" href="css/normalize.css">
  <link rel="stylesheet" href="css/Style.css">
  <link rel="stylesheet" href="css/font-awesome.css">
+ <link rel="stylesheet" href="css/animate.css">
 
  </head>
   <!-- Hero -->
@@ -140,6 +141,7 @@
 <!-- Sign Up Now! -->
  <section class="Sign Up Now">
   <h1>SIGN UP NOW!</h1>
+  <h1 class="fadeIn">Example</h1>
   <p>Blocbox is a powerful way to collaborate. Sign Up Now!</p>
   </section>
 
