--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <!-- Sign Up Now! -->
  <section class="Sign Up Now">
   <h1>SIGN UP NOW!</h1>
-  <h1 class="animated fadeIn">Example</h1>
+  <h1 class="animated fadeIn">Whatever</h1>
   <p>Blocbox is a powerful way to collaborate. Sign Up Now!</p>
   </section>
 
