--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
  </main>
 <!-- Sign Up Now! -->
  <section class="Sign Up Now">
-  <h1>SIGN UP NOW!</h1>
-  <h1 class="animated fadeIn">Whatever</h1>
-  <p>Blocbox is a powerful way to collaborate. Sign Up Now!</p>
+
+  <h1 class="animated fadeIn">SIGN UP NOW!</h1>
+  <p>Blocbox is a powerful way to collaborate with your colleagues and friends. Sign Up Now and open yourself to a new, effective and simple world of creative collaboration.</p>
   </section>
 
  <!-- Footer -->
