--- a/index.html
+++ b/index.html
@@ -123,19 +123,21 @@
        <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
        <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
      </li>  
-       <li class="one-fourth">
+       <li class="two-fourth">
+         <class="seconditem">
     <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
     </blockquote>
     <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
     <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
   </li>
-  <li class="one-fourth">
+  <li class="three-fourth">
+    <class="fourthitem">
     <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
     </blockquote>
     <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
     <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
   </li>
-  <li class="one-fourth">
+  <li class="Four-fourth">
     <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
     </blockquote>
     <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
