--- a/Images.html
+++ b/Images.html
@@ -21,7 +21,11 @@
   <main role="main">
    <!-- Benefits -->
    <section class="content">
-     
+     <div class="container">
+       <div class="header">
+         <h1>Images</h1>
+       </div>
+     </div>
      <div class="container">
         <div class="content-item">
           <div class="item-box">
