--- a/dashboard.html
+++ b/dashboard.html
@@ -24,7 +24,7 @@
      <div class="items">
        <p>Items</p>
        <ul>
-         <li><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
+         <li><a href="#"><i class="fa fa-th-large"></i> All Items</a> All Items: active {color: Blue;}</li>
          <li><a href="#"><i class="fa fa-file-o"></i> Notes</a></li>
          <li><a href="https://avalon2012.github.io/blocbox/Images.html"><i class="fa fa-picture-o"></i> Images</a></li>
          <li><a href="#"><i class="fa fa-link"></i> Links</a></li>
