--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,13 @@
  <link rel="stylesheet" href="css/font-awesome.css">
  <link rel="stylesheet" href="css/animate.css">
 
+<style>
+a:active {
+    background-color: blue;
+}
+</style>
  </head>
+
  <body class="Dashboard">
   <!-- LEFT NAV -->
    <nav id="left-nav" class="left-nav">
