--- a/dashboard.html
+++ b/dashboard.html
@@ -15,6 +15,7 @@
  <link rel="stylesheet" href="css/Style.css">
  <link rel="stylesheet" href="css/font-awesome.css">
  <link rel="stylesheet" href="css/animate.css">
+ <link rel="stylesheet" href="css/dropit.css">
 
 <style>
 a:active {
@@ -57,6 +58,28 @@ a:active {
        <div class="header">
          <h1>All Items</h1>
          <a href="#" class="btn">+ Add</a>
+
+          <ul class="menu">
+            <li>
+              <a href="#" class="btn">+ Add</a>
+              <ul>
+                  <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
+                  <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
+                  <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
+              </ul>
+            </li>
+          </ul>
+
+
+
+
+
+
+
+
+
+
+
        </div>
      </div>
      <div class="container">
@@ -124,6 +147,13 @@ a:active {
  </main>
 </body>
 </html>
+
+
+<script src="js/jquery-3.2.1.js"></script>
+   <script src="js/dropit.js"></script>
+   <script type="text/javascript">
+     $(".menu").dropit();
+   </script>
 
  </body>
  </html>
