--- a/dashboard.html
+++ b/dashboard.html
@@ -25,6 +25,12 @@ a:active {
  </head>
 
  <body class="Dashboard">
+
+<!-- RESPONSIVE NAV -->
+   <a class="hamburger" id="menu" href="#">&#9776;</a>
+
+
+
   <!-- LEFT NAV -->
    <nav id="left-nav" class="left-nav">
      <a href="#" class="site-logo"><img src="images/site-logo.png" /></a>
@@ -57,8 +63,7 @@ a:active {
      <div class="container">
        <div class="header">
          <h1>All Items</h1>
-         <a href="#" class="btn">+ Add</a>
-
+  
           <ul class="menu">
             <li>
               <a href="#" class="btn">+ Add</a>
@@ -153,6 +158,12 @@ a:active {
    <script src="js/dropit.js"></script>
    <script type="text/javascript">
      $(".menu").dropit();
+
+$( "#menu" ).click(function() {
+         $("#left-nav").toggleClass("open", 200);
+     });
+
+
    </script>
 
  </body>
