--- a/dashboard.html
+++ b/dashboard.html
@@ -53,7 +53,19 @@ a:active {
    <div class="settings">
      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
      <p>Joey Kirk</p>
-     <a href="#"><i class="fa fa-cog"></i></a>
+
+          <ul class="menu">
+            <li>
+               <a href="#"><i class="fa fa-cog"></i></a>
+              <ul>
+                  <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
+                  <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
+                  <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
+              </ul>
+            </li>
+          </ul>
+
+
    </div>
    </nav>
 
