--- a/dashboard.html
+++ b/dashboard.html
@@ -50,24 +50,27 @@ a:active {
        </ul>
      </div>
      </div>
+
+
+<!-- Settings menu pop-up -->
+
    <div class="settings">
      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
      <p>Joey Kirk</p>
 
-          <ul class="menu">
+          <ul class="menu menu-bottom">
             <li>
                <a href="#"><i class="fa fa-cog"></i></a>
               <ul>
-                  <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
-                  <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
-                  <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
+                  <li><a href="#"><i class="fa fa-cog"></i>Account settings</a></li>
+                  <li><a href="#"><i class="fa fa-picture-o"></i>Collaborators</a></li>
+                  <li><a href="#"><i class="fa fa-link"></i>Sign Out</a></li>
               </ul>
             </li>
           </ul>
-
-
    </div>
    </nav>
+
 
   <main role="main">
    <!-- Benefits -->
