--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
          </ul>
        </nav>
        <div class="right-footer-block one-third">
-         <img class="logo" src="images/logo.png" alt="Blocbox" />
+         <img class="logo" src="images/Logo.png" alt="Blocbox" />
        </div>
    </div>
  </footer>
