Final Push, Deploying Blocbox

--- a/Images.html
+++ b/Images.html
@@ -14,7 +14,7 @@
  <link rel="stylesheet" href="css/style.css">
  <link rel="stylesheet" href="css/font-awesome.css">
 
- <!-- Animate file for Assignment 29 -->
+ <!-- Animate file for Assignment  tweak 29 -->
  <link rel="stylesheet" href="css/animate.min.css">
 
 </head>
